apps/base/nextcloud/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  parentRefs:
    - name: homelab
      namespace: gateway
  hostnames:
    - nextcloud.leotsgo.dev
  rules:
    - backendRefs:
        - name: nextcloud
          port: 80
