apps/base/nextcloud/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  tls:
  - hosts:
    - nextcloud.leotsgo.dev
  rules:
  - host: nextcloud.leotsgo.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud
            port:
              number: 80
